adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, odit? Fugiat autem assumenda eos non iusto ratione voluptatem? Quia pariatur minima modi sit odio vel tempore a saepe maxime veritatis?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum accusamus repellendus ex tempora, non, rem aperiam alias qui nobis consectetur unde vel. Temporibus labore saepe recusandae voluptatibus cumque, vel veniam.</p>
 </body>
 </html>
